<resources>
    <string name="app_name">工大校园</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="home_page">主页</string>
    <string name="not_bind">未绑定</string>
    <string name="news">资讯</string>
    <string name="notification">校内通知</string>
    <string name="zjuter">工大人</string>
    <string name="travel_and_food">吃在路上</string>
    <string name="library">图书馆</string>
    <string name="borrow_record">当前借阅</string>
    <string name="history">借阅历史</string>
    <string name="teaching_affairs">教务处</string>
    <string name="grade_query">成绩查询</string>
    <string name="free_room_query">空教室查询</string>
    <string name="query">查询</string>
    <string name="query_condition">查询条件</string>
    <string name="query_result">查询结果</string>
    <string name="select_term">选择学期</string>
    <string name="select_week">选择第几周</string>
    <string name="select_weekday">选择星期</string>
    <string name="select_campus">选择校区</string>
    <string name="select_start_time">选择起始节</string>
    <string name="select_end_time">选择结束节</string>
    <string name="settings">设置</string>
    <string name="accounts">账户</string>
    <string name="student_id">学号</string>
    <string name="edit_student_id">编辑学号</string>
    <string name="library_password">图书馆系统密码</string>
    <string name="edit_library_password">编辑图书馆系统密码</string>
    <string name="teaching_affairs_password">教务系统密码</string>
    <string name="edit_teaching_affairs_password">编辑教务系统密码</string>
    <string name="about">关于</string>
    <string name="open_source_licence">开源许可协议</string>
    <string name="check_update">检查更新</string>
    <string name="thanks">鸣谢</string>
    <string name="version_code">版本号</string>

    <string name="no_network">无网络连接</string>
    <string name="wrong_userid_or_password">用户名或密码错误</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_event_view">EventViewActivity</string>
    <string name="title_activity_news_view">正在加载</string>
    <string name="title_activity_license">LicenseActivity</string>
</resources>
