<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="start"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/item_user_state"
        android:layout_marginTop="@dimen/menu_item_padding_vertical"
        android:paddingTop="@dimen/menu_item_padding_vertical"
        android:paddingBottom="@dimen/menu_item_padding_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/ic_person_blue"
            android:layout_width="28dp"
            android:layout_height="28dp" />

        <TextView
            android:id="@+id/user_status"
            android:layout_gravity="center"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:text="@string/not_bind"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/divider_height"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/item_news"
        android:paddingTop="@dimen/menu_item_padding_vertical"
        android:paddingBottom="@dimen/menu_item_padding_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/ic_description_grey"
            android:layout_width="@dimen/menu_icon"
            android:layout_height="@dimen/menu_icon" />

        <TextView
            android:layout_gravity="center"
            android:textSize="@dimen/abc_text_size_menu_material"
            android:text="@string/news"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_library"
        android:paddingTop="@dimen/menu_item_padding_vertical"
        android:paddingBottom="@dimen/menu_item_padding_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/ic_account_balance_grey"
            android:layout_width="@dimen/menu_icon"
            android:layout_height="@dimen/menu_icon" />

        <TextView
            android:layout_gravity="center"
            android:textSize="@dimen/abc_text_size_menu_material"
            android:text="@string/library"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_teaching_affairs"
        android:paddingTop="@dimen/menu_item_padding_vertical"
        android:paddingBottom="@dimen/menu_item_padding_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/ic_school_grey"
            android:layout_width="@dimen/menu_icon"
            android:layout_height="@dimen/menu_icon" />

        <TextView
            android:layout_gravity="center"
            android:textSize="@dimen/abc_text_size_menu_material"
            android:text="@string/teaching_affairs"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/divider_height"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/item_settings"
        android:paddingTop="@dimen/menu_item_padding_vertical"
        android:paddingBottom="@dimen/menu_item_padding_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/ic_settings_grey"
            android:layout_width="@dimen/menu_icon"
            android:layout_height="@dimen/menu_icon" />

        <TextView
            android:layout_gravity="center"
            android:textSize="@dimen/abc_text_size_menu_material"
            android:text="@string/settings"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
